--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="MoneyLeek" />
+    <meta name="description" content="Primedios" />
     <link rel="apple-touch-icon" href="/assets/images/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <title>MoneyLeek</title>
+    <title>Primedios</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
