--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="/assets/images/logo.png"
+      href="/assets/images/icon.png"
       style="object-fit: contain"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Primedios" />
-    <link rel="apple-touch-icon" href="/assets/images/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/images/icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
